# monitora_camera

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  HikvisionRadarProV42.spec  README.md  README_hikvision_pro_v42.txt  SOLUCAO_ALERTSTREAM.md  TESTE_NOME_CAMERA.md  build_hikvision_pro_v42_windows.bat  build_release_windows.bat  coverage.xml  hikvision_pro_v42_app.py  hikvision_pro_v42_config.json  main.py  pyproject.toml  pytest.ini  replace_parse.py  requirements.txt  requirements_hikvision_pro_v4.txt  run.bat  test_camera_name.py  tmp_replace.py  update_manifest.example.json
.cursor/plans/: melhorias_gerais_do_projeto_47f415a2.plan.md
configs/: hikvision_pro_v42_config.example.json  requirements_hikvision_pro_v4.txt
docs/: AGENTS.md  CLAUDE.md  DEVELOPMENT.md  README_hikvision_pro_v42.txt  SECURITY.md  TROUBLESHOOTING.md  architecture.md
installer/: hikvision_radar_pro.iss
local_update/: update_manifest.json
scripts/: build_hikvision_pro_v42_windows.bat  build_local_update_package.bat  test_alertstream.py  test_snapshot_manual.py
src/: app.py
src/core/: cache.py  camera_client.py  config.py  container.py  crypto.py  database.py  event_integration.py  event_manager.py  evolution_client.py  exceptions.py  logging_config.py  parsing.py  types.py  validators.py
src/detection/: __init__.py  car_detector.py
src/repositories/: __init__.py  camera_repository.py  event_repository.py  user_repository.py
tests/: __init__.py  conftest.py  test_hikvision_pro_v42_app.py
tests/unit/: test_crypto.py  test_repositories.py  test_validators.py
ui/: __init__.py  first_run_wizard.py  qt_imports.py  widgets.py  workers.py
ui/tabs/: base_tab.py  cameras_tab.py  dashboard_tab.py  evolution_tab.py  history_tab.py  monitor_tab.py  report_tab.py  users_tab.py
